Updated draft of the IS Serverside Code article

--- a/docs/interaction-studio/is-serverside-code-in-campaigns.mdx
+++ b/docs/interaction-studio/is-serverside-code-in-campaigns.mdx
@@ -51,10 +51,32 @@ When you open the Serverside Code tab in a new Template creation screen for Web,
 
 <Image img={templateUi} alt='Interaction Studio Serverside Template UI screenshot'/>
 
+The final outcome of your work in this tab is the personalised payload (5). Depending on the type of Campaign this template is for it will either be delivered as is (Serverside), put into a Data Extension (Triggered Campaign) or be available to leverage for logic in Clientside Code and experience in Handlebars tabs (Web Campaign).
+
 :::note You Should Know
 
-If you don't see experience or campaign in the payload section (5), it means there is an error in your template code (1).
+If you don't see `experience` or `campaign` in the payload object (5), it means there is a bug in your template code (1).
 
-If you don't see the configuration form preview (3) updates despite writing changes in the serverside code (1) it might froze. Check whether you are still logged in to the Interaction Studio (MCP session length is shorter to that of SFMC). If yes, cut (`ctrl`/`cmd` + `x`) your whole serverside code, provide any symbol (like `a`) to overwrite the cache and paste back the code (`ctrl`/`cmd` + `v`).
+If you don't see the configuration form preview (3) updates despite making changes in the serverside code (1) it probably froze. Check whether you are still logged in to the Interaction Studio (MCP session length is shorter to that of SFMC). If yes, cut (`ctrl`/`cmd` + `x`) your whole serverside code, provide any symbol (like `a`) to overwrite the cache and replace it back by pasting the code (`ctrl`/`cmd` + `v`).
 
 :::
+
+## Writing Serverside Code
+
+### Basic properties
+
+### Complex properties
+
+### Arrays
+
+### Default values
+
+### Options
+
+### Decorators
+
+### Recommendations
+
+### Context
+
+### Imports
