Fix to Primary Key flag on Send Log

--- a/docs/config/sfmc-enhanced-send-log.mdx
+++ b/docs/config/sfmc-enhanced-send-log.mdx
@@ -99,7 +99,7 @@ Here you can see sample Customised Send Log that I like to use:
 | SubscriberKey | String | 18 | | Yes |
 | EmailAddr | Email | 254 | | Yes |
 | EmailName_ | String | 150 | | Yes |
-| LogDate | Date | | Yes |
+| LogDate | Date | | | |
 | BusinessSpecificField1 | | | | Yes |
 | BusinessSpecificField2 | | | | Yes |
 
