Update to toolset page

--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -8,19 +8,17 @@ import { LeadText } from '../src/components/LeadText.js';
 
 <LeadText content="Show me your tools, and I will tell you who you are. Or so they say." />
 
-## Software
+## Operating System
 
-### Operating System
+Mac (sorry Ubuntu, it wasn't working for me anymore).
 
-Mac and Windows (sorry Ubuntu, this wasn't working for me anymore).
+## Browser
 
-### Browser
+Safari for non-development, [Firefox Developer Edition](https://www.mozilla.org/en-US/firefox/developer/) and [Chrome](https://www.google.com/chrome/) for everything code related.
 
-Safari for non-development, [Firefox Developer Edition](https://www.mozilla.org/en-US/firefox/developer/) and [Chrome](https://www.google.com/chrome/) for anything code related.
+## Text Editor
 
-### Text Editor
-
-For all my development on both Mac and Windows, I'm using Microsoft [Visual Studio Code](https://code.visualstudio.com/). I tested about a dozen various editors, and this one feels like the most polished and universal solutions for Marketing Automation Developers. It's blazing fast, powerful and extendable — great out-of-the-box, awesome once you configured for your own needs. I'm using it not only for standard coding (HTML, CSS, JavaScript, SSJS, AMPScript, MJML) but also for writing Markdown, working with JSON, manipulating CSV files and RegExing. As for now, I'm using other solutions only for SQL and Jupyter Notebooks.
+For all my development and writing, I'm using Microsoft [Visual Studio Code](https://code.visualstudio.com/). I tested about a dozen various editors, and this one feels like the most polished and universal solutions for Marketing Automation Developers. It's blazing fast, powerful and extendable — great out-of-the-box, awesome once you configured for your own needs. I'm using it not only for standard coding (HTML, CSS, JavaScript, SSJS, AMPScript, MJML) but also for writing Markdown (including this site), working with JSON, manipulating CSV files and RegExing.
 
 A lot of VSCode powers comes from a fantastic extension repository, and some require a sincere recommendation (in alphabetical order):
 
@@ -30,42 +28,41 @@ A lot of VSCode powers comes from a fantastic extension repository, and some req
 - [Live Server](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer): There are many tools to see hot reloading version of the page you are coding. This one is the simplest.
 - [Material Theme](https://marketplace.visualstudio.com/items?itemName=Equinusocio.vsc-material-theme): It's a beautiful looking theme.
 - [MJML](https://marketplace.visualstudio.com/items?itemName=mjmlio.vscode-mjml) and [mjml-syntax](https://marketplace.visualstudio.com/items?itemName=digitalstreamio.mjml-syntax): Must have extensions if you want to write mobile-first emails with MJML in VSCode.
+- [MCFS (AMPScript)](https://marketplace.visualstudio.com/items?itemName=sergey-agadzhanov.AMPscript): Worth already for syntax suggestions and highlighting, but there are also more fun features if you dare to connect it to SFMC.
 - [Path Intellisense](https://marketplace.visualstudio.com/items?itemName=christian-kohler.path-intellisense): Autocompletes paths. Yay!
-- [Python](https://marketplace.visualstudio.com/items?itemName=ms-python.python): If you write Python, you use Python.
 - [Rainbow CSV](https://marketplace.visualstudio.com/items?itemName=mechatroner.rainbow-csv): Shows columns in pure CSV. Happy magic.
 - [TabNine](https://marketplace.visualstudio.com/items?itemName=TabNine.tabnine-vscode): If you ever dreamt about the code that writes itself, this is the extension you want. Creepy. Awesome. But creepy. Must have.
 - [Todo Tree](https://marketplace.visualstudio.com/items?itemName=Gruntfuggly.todo-tree): The best way to work with TODO logging in code.
 - [vscode-icons](https://marketplace.visualstudio.com/items?itemName=vscode-icons-team.vscode-icons): Those are nice looking icons.
-- [Live Share](https://marketplace.visualstudio.com/items?itemName=MS-vsliveshare.vsliveshare-pack): Pair programming in remote times.
 - [HTML End Tag Labels](https://marketplace.visualstudio.com/items?itemName=anteprimorac.html-end-tag-labels): Adds HTML tag details on closing tags to make it easier to find yourself in the nested jungle.
 
 Finally, it is not an extension, but a must-have for me: [Fira Code](https://github.com/tonsky/FiraCode) font. Check it out. You will love it.
 
 If you are interested in my configuration, you can find dotfiles on the [Github Repository](https://github.com/MateuszDabrowski/dotfiles/tree/master/vscode).
 
-### Terminal
+## Terminal
 
-90% of the time I'm using the terminal integrated into VSCode. 10% of the time it is [iTerm](https://www.iterm2.com) (on Mac) or Powershell (on Windows).
+95% of the time I'm using the terminal integrated into VSCode. 5% of the time it is [iTerm](https://www.iterm2.com) (on Mac) or Powershell (on Windows).
 
 Windows setup with Powershell both as standalone and in the VSCode is quite out-of-the-box with just some [useful aliases](https://github.com/MateuszDabrowski/dotfiles/blob/master/terminal/powershell-profile.txt).
 
 My Mac is a bit more customized. For starters, instead of bash, I'm using [zsh](http://zsh.sourceforge.net) with [oh-my-zsh](https://ohmyz.sh) and [Homebrew](https://brew.sh). I also have a lot of aliases to speed up my work (you can check them in [Github Repo](https://github.com/MateuszDabrowski/dotfiles/blob/master/terminal/.zshrc)).
 
-On both systems, I leverage [Node.js](https://nodejs.org/en/) for JavaScript related coding and [Miniconda](https://docs.conda.io/en/latest/miniconda.html) to stay sane in the [jungle full of Pythons](https://xkcd.com/1987/).
+## Diagrams
 
-### Diagrams
+For work - [Lucidchart](https://www.lucidchart.com/). I need visuals for mapping out architectures, processes and stories. Lucidchart makes it fast and easy.
 
-[Lucidchart](https://www.lucidchart.com/). I need visuals for mapping out architectures, processes and stories. Lucidchart makes it fast and easy.
+Privately - [Mermaid](http://mermaid.js.org). Lets me create diagrams with code and output them to a website in non-image format for better performance. You can find it in multiple articles, like [MMC Integration Patterns](../../docs/config/sfmc-mcc-integration-patterns/#single-business-unit-single-org-setup)
 
-### API Client
+## API Client
 
 [Postman](http://postman.com). It is simple, and it works.
 
-### Design
+## Design
 
 I'm not a graphic designer. I need something that is simple, fast and can output images for emails, landing pages and presentations. With such needs, there is nothing better than [Sketch](https://www.sketch.com/).
 
-### Productivity
+## Productivity
 
 Apart from the above main areas, I also love some smaller apps that make my life better (unfortunately, all but the last one are Mac only):
 
@@ -73,6 +70,18 @@ Apart from the above main areas, I also love some smaller apps that make my life
 2. [Better Touch Tool](https://folivora.ai/) not only allows you to leverage gestures to their fullest but also takes care of windows snapping to the edges.
 3. [Mailplane](https://mailplaneapp.com/) - if you use Gmail and have a Mac, this app is a must.
 4. [PDF Expert](https://pdfexpert.com/) is the best PDF app you can have.
-5. For tasks and notes, after testing multiple options, I stuck with Apple Notes and Reminders.
+5. [Cleanshot](https://cleanshot.com) makes capturing, annotating and sharing screenshots a breeze.
+6. [Reeder](https://reederapp.com) - RSS is my favourite way of keeping up to speed with topics that are important to me. Reeder does it best.
+6. For tasks and notes, after testing multiple options, I stuck with Apple Notes and Reminders.
 
 For Windows, there is one must-have power user tool: [Microsoft PowerToys](https://github.com/microsoft/PowerToys). Make your day-to-day Windows life better.
+
+## Web Tools
+
+There are many website tools that make my life so much easier.
+
+1. [Regex101](https://regex101.com) is a one-stop-shop for writing and testing your regular expressions.
+2. [Can I Use?](https://caniuse.com/) is perfect for checking whether a frontend feature is supported wide enough for you to use it on your website or Cloud Page.
+3. [Can I Email?](https://www.caniemail.com) does the same as the previous tool, but in the everchanging yet still always behind email world.
+4. [Built With](https://builtwith.com) provides a sneak peak into what created a website. Starting discovery for Marketing Cloud Personalization? This is your first step.
+5. [Placehold](https://placehold.co) is the best solution for adding placeholder images to your design. Just adapt the URL to get exactly what you need.
