Addition of Hidden Triggered Send Managed Lists mention in Contact Deletion options

--- a/docs/config/sfmc-contact-deletion.mdx
+++ b/docs/config/sfmc-contact-deletion.mdx
@@ -477,6 +477,7 @@ Another group ripe for deletion are Contacts that you cannot contact. Multiple s
 2. Hard bounced contacts
 3. Contacts that do not have any channel information (like an email address or mobile phone)
 4. Bad quality contacts (test records, fake emails, contacts that failed Email Studio List Detective)
+5. [Hidden Triggered Send Managed List Subscribers](https://help.salesforce.com/s/articleView?id=000381035&type=1)
 
 Before deletion, it might be worth saving some of this data for the future (especially suppressed contacts for compliance or hard bounced contacts for future deliverability).
 
