Updated draft of the IS Serverside Code article

--- a/docs/config/sfmc-mcc-integration-patterns.mdx
+++ b/docs/config/sfmc-mcc-integration-patterns.mdx
@@ -49,6 +49,7 @@ Synchronised Data Extension Visibility | Parent only or All | All integrated
 Shared Data Extension | Supported | Supported
 Shared Salesforce Data Extension | Supported | Not Supported
 Profile/Preference Center | Standard or Custom | Custom only
+Profile Attributes CRM Sync | Automatic | Custom Automation only
 Web Collect | Supported | Not Supported
 Disconnecting MCC Integration | On Parent for whole SFMC | On per Business Unit basis
 
